Fix the verical overflow in mobile browsers

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 @layer base {
   html, body, #root {
-    height: 100%;
+    height: 100dvh;
     width: 100%;
     overflow: hidden;
     background-color: black;
